--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/add_button_background" />
+            <solid android:color="@color/button_background" />
             <corners android:radius="10dp" />
         </shape>
     </item>
