--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -7,13 +7,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/input_section"
-        app:layout_constraintRight_toRightOf="@id/input_section"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/input_section"
-        android:layout_margin="10dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"/>
 
     <RelativeLayout
         android:id="@+id/input_section"
@@ -45,7 +46,7 @@
             android:layout_alignTop="@id/edit_text"
             android:layout_alignBottom="@id/edit_text"
             android:layout_toEndOf="@id/edit_text"
-            android:background="@drawable/add_button"
+            android:background="@drawable/button"
             android:text="@string/add_button" />
 
     </RelativeLayout>
