--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="edit_text_background">#FFEEEEEE</color>
     <color name="button_background">#FF00ADB5</color>
     <color name="text_view_background">#FF222831</color>
+    <color name="dialog_background">#FFEEEEEE</color>
 </resources>
