--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -1,33 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_margin="8dp"
-    android:padding="10dp"
-    android:background="@color/dialog_background">
+    android:background="@color/dialog_background"
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/update_text"
-        android:hint="@string/update_text_hint"
-        android:padding="12dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
+        android:hint="@string/update_text_hint"
         android:importantForAutofill="no"
+        android:inputType="text"
+        android:padding="12dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:inputType="text" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/update_button"
-        app:layout_constraintTop_toBottomOf="@id/update_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@drawable/button"
-        android:text="@string/update_button"/>
+        android:text="@string/update_button"
+        app:layout_constraintTop_toBottomOf="@id/update_text"
+        app:layout_constraintLeft_toLeftOf="@id/update_text"
+        app:layout_constraintRight_toRightOf="@id/update_text"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
