--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -29,7 +29,7 @@
         <EditText
             android:id="@+id/edit_text"
             android:layout_width="250dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_margin="5dp"
             android:background="@drawable/edit_text"
             android:hint="@string/edit_text_hint"
